# hypothesis-awkward

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  index.html  pyproject.toml  versions.json  zensical.toml
.claude/: CLAUDE.md
.claude/agents/: docs-persona-ai.md  docs-persona-awkward-core-dev.md  docs-persona-downstream-dev.md  docs-persona-evaluator.md  docs-persona-pbt-expert.md  docs-persona-researcher.md
.claude/rules/: ci.md  diataxis-review.md  docs-voice.md  docs.md  git.md  testing-patterns.md  worktree.md
.design/: README.md
.design/api/: 2026-01-21-01-Types-API.md  2026-01-21-01-types-api.md  2026-01-21-types-api.md  2026-02-02-01-Forms-API.md  2026-02-02-01-forms-api.md  2026-02-02-forms-api.md  2026-02-04-01-Arrays-API.md  2026-02-04-01-arrays-api.md  2026-02-04-arrays-api.md  2026-02-12-01-Contents-API.md  2026-02-12-01-contents-api.md  2026-02-12-contents-api.md  2026-02-13-01-String-bytestring-API.md  2026-02-13-01-string-bytestring-api.md  2026-02-13-string-bytestring-api.md  2026-02-23-01-Max-length-API.md  2026-02-23-01-max-length-api.md  2026-02-23-max-length-api.md  2026-03-27-01-Option-contents-API.md  2026-03-27-01-option-contents-api.md  2026-03-27-02-Option-integration-API.md  2026-03-27-02-option-integration-api.md  2026-03-27-option-contents-api.md  2026-03-27-option-integration-api.md  2026-03-29-01-Max-size-API.md  2026-03-29-01-max-size-api.md  2026-03-29-max-size-api.md  2026-04-24-01-Min-length-API.md  2026-04-24-01-min-length-api.md  2026-04-24-min-length-api.md
.design/impl/: 2026-01-21-01-Types-directory-structure.md  2026-01-21-01-types-directory-structure.md  2026-01-21-types-directory-structure.md  2026-02-02-01-Forms-directory-structure.md  2026-02-02-01-forms-directory-structure.md  2026-02-02-forms-directory-structure.md  2026-02-17-01-Contents-tree-builder.md  2026-02-17-01-contents-tree-builder.md  2026-02-17-contents-tree-builder.md  2026-02-21-01-Contents-top-down-builder.md  2026-02-21-01-contents-top-down-builder.md  2026-02-21-contents-top-down-builder.md
.design/notes/: 2026-01-22-types-tests-progress.md  2026-02-12-01-positional-keyword-convention.md  2026-02-12-positional-keyword-convention.md  2026-06-17-01-README-intro-persona-review.md  2026-06-17-02-Docs-plan.md  2026-06-17-02-Docs-strategy.md  2026-06-17-02-docs-strategy.md  2026-06-17-docs-strategy.md
.design/research/: 2026-01-21-type-system-research.md  2026-01-21-ux-interview-01.md  2026-02-02-numpy-form-research.md  2026-02-03-form-system-research.md  2026-02-04-01-Direct-constructors-research.md  2026-02-04-01-direct-constructors-research.md  2026-02-04-direct-constructors-research.md  2026-02-12-01-String-bytestring-research.md  2026-02-12-01-string-bytestring-research.md  2026-02-12-string-bytestring-research.md  2026-02-17-01-Record-array-research.md  2026-02-17-01-record-array-research.md  2026-02-17-02-Union-array-research.md  2026-02-17-02-union-array-research.md  2026-02-17-record-array-research.md  2026-02-17-union-array-research.md  2026-02-23-01-Max-length-research.md  2026-02-23-01-max-length-research.md  2026-02-23-max-length-research.md  2026-03-27-01-Option-types-research.md  2026-03-27-01-option-types-research.md  2026-03-27-option-types-research.md  2026-03-29-01-Total-size-budget-research.md  2026-03-29-01-total-size-budget-research.md  2026-03-29-total-size-budget-research.md  2026-04-24-01-min-length-research.md
.github/: dependabot.yml  release.yml
.github-deps/latest/: requirements.txt
.github-deps/minimum/: requirements.txt
.github/scripts/: bootstrap-mike-versions.sh
.github/workflows/: changelog.yml  conventional-label.yml  docs-dev.yml  docs-pr-build.yml  docs-pr-cleanup.yml  docs-pr-deploy.yml  docs-pr-preview.yml  docs-release.yml  nightly-test.yml  pre-commit.yml  pypi.yml  release.yml  unit-test.yml
0.10.0/: sitemap.xml
0.11.0/: index.html  sitemap.xml
0.11.0/util/: index.html
0.12.0/: sitemap.xml
0.13.0/: index.html  sitemap.xml
0.13.0/util/: index.html
0.14.0/: index.html  sitemap.xml
0.14.0/guide/: index.html
0.14.0/util/: index.html
0.15.0/: 404.html  index.html  sitemap.xml
0.15.0/guide/: index.html
0.15.0/reference/: index.html
0.15.0/util/: index.html
0.16.0/: 404.html  index.html  sitemap.xml
0.16.0/guide/: index.html
0.16.0/reference/: index.html
0.16.0/util/: index.html
0.16.1/: 404.html  index.html  sitemap.xml
0.16.1/guide/: index.html
0.16.1/reference/: index.html
0.16.1/util/: index.html
0.17.0/: 404.html  index.html  sitemap.xml
0.17.0/guide/: index.html
0.17.0/reference/: index.html
0.17.0/util/: index.html
0.18.0/: 404.html  index.html  sitemap.xml
0.18.0/guide/: index.html
0.18.0/reference/: index.html
0.18.0/util/: index.html
0.18.1/: 404.html  index.html  sitemap.xml
0.18.1/guide/: index.html
0.18.1/reference/: index.html
0.18.1/util/: index.html
0.19.0/: 404.html  index.html  sitemap.xml
0.19.0/guide/: index.html
0.19.0/reference/: index.html
0.19.0/stylesheets/: extra.css
0.19.0/util/: index.html
0.19.1/: 404.html  index.html  sitemap.xml
0.19.1/guide/: index.html
0.19.1/reference/: index.html
0.19.1/util/: index.html
0.8.0/: 404.html  index.html  search.json
0.8.1/: 404.html  index.html  sitemap.xml
0.9.0/: index.html
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/guide/: index.html
dev/reference/: index.html
dev/util/: index.html
docs/: index.md
docs/guide/: generating-and-shrinking-samples.md  getting-started.md  index.md  installation.md  roadmap.md  testing-awkward-array.md
docs/reference/: index.md  util.md
docs/strategies/: builtins.md  constructors.md  contents.md  numpy.md
latest/: 404.html  index.html  objects.inv  search.json  sitemap.xml
latest/reference/: index.html
latest/util/: index.html
pr/100/: 404.html  index.html  sitemap.xml
pr/101/: 404.html  index.html  sitemap.xml
tests/: conftest.py  find_settings.py  scaled_settings.py  test_numpy.py  test_scaled_settings.py
(+2197 files in other folders)
