[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "hypothesis-awkward"
dynamic = ["version"]
description = "Hypothesis strategies for Awkward Array"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tai Sakuma" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["hypothesis", "awkward-array", "testing", "property-based testing"]
dependencies = [
    "awkward>=2.9",
    "hypothesis>=6.147",
    "typing_extensions>=4.1; python_version < '3.11'",
]

[dependency-groups]
dev = ["mypy", "pytest", "pytest-cov", "ruff"]
docs = [
    "mkdocstrings-python",
    "zensical",
    "tomlkit",
    "mike @ git+https://github.com/squidfunk/mike.git@2.2.0+zensical-0.1.0",
]
print = ["rich", "icecream"]

[tool.hatch.version]
source = "regex_commit"
path = "src/hypothesis_awkward/__about__.py"
tag_name = "u{new_version}"
check_dirty = false
tag_sign = false

[tool.pytest]
addopts = ["--doctest-modules", "--doctest-glob='*.md'"]
doctest_optionflags = ["ELLIPSIS"]
filterwarnings = ["ignore::hypothesis.errors.NonInteractiveExampleWarning"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D401", # First line should be in imperative mood
    "E501", # line too long
    "E741", # ambiguous variable name 'l' (lowercase L)
]

[tool.ruff.lint.isort]
known-first-party = ["awkward"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88

[[tool.mypy.overrides]]
module = ["awkward.*"]
ignore_missing_imports = true
